...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_panel"
    android:id="@+id/popup">

    <LinearLayout
        android:id="@+id/popuplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
...
