<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_panel"
    tools:context=".DashboardActivity">


...
        android:fontFamily="serif"
        android:text="JOB PREFS"
        app:layout_constraintEnd_toStartOf="@+id/historyBtn"
        app:layout_constraintTop_toBottomOf="@+id/allJobsBtnDB" />

    <Button
        android:id="@+id/backBtnDB"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="93dp"
        android:fontFamily="serif"
        android:text="LOGOUT"
        app:layout_constraintEnd_toEndOf="parent"
...
