...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:id="@+id/signup"
    android:background="@drawable/wood_panel"
    >

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="123dp"
...
