...
    android:layout_height="match_parent"
    android:id="@+id/paymentInfo"
    android:background="@drawable/wood_panel"
    tools:context=".PaymentInfoActivity">

    <Button
        android:id="@+id/paymentSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="16dp"
...
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        android:text="CVV:"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valid_thru_text" />

    <TextView
...
        android:text="Credit Card Info"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
...
        android:hint="Input Card Number Here"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/card_number_text"
        app:layout_constraintTop_toBottomOf="@+id/creditCardTitle" />

    <EditText
        android:id="@+id/cardHolderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
...
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        android:ems="10"
        android:hint="Input CVV Code Here"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/cvv_text"
        app:layout_constraintTop_toBottomOf="@+id/expiryDate" />

    <EditText
        android:id="@+id/expiryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
        android:hint="ex: 01/02"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/valid_thru_text"
        app:layout_constraintTop_toBottomOf="@+id/cardHolderName" />

    <TextView
        android:id="@+id/statusBtn"
        android:layout_width="271dp"
        android:layout_height="52dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="28dp"
...
